
Added an easy way to create news that are displayed below the login form in
the /typo3 login screen. Just create records of type "System News" in your
root folder.

When TYPO3 runs with two different domain names for the FE and the BE, it is
now possible to set accordingly different cookie domains using
$TYPO3_CONF_VARS['FE']['cookieDomain'] and
$TYPO3_CONF_VARS['BE']['cookieDomain'].

The media element now has a core wizard for rewriting URLs. This allows the
user to copy the URL from browser (e.g. a youtube URL like
http://www.youtube.com/watch?v=pkA9qw80xO0) and use it as URL in the media
element. Currently supported platforms: youtube, dailymotion, sevenload,
vimeo, clipfish, google, metacafe, myvideo, liveleak and veoh. This is the
result of a Google Summer of Code student's work.

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

Frameset is gone / New Pagetree
-------------------------------------------------------------------------------

The frameset which used to lay out the backend was removed. The new backend
works using the ExtJS viewport, providing an easy, fast and unified interface
to manipulate the content of the different panels. As a side effect, the
navigation tree can be resized at will.

Adding to that we have a brand New Pagetree based on ExtJS / ExtDirect and a
new powerful API for "trees" and "context menus".

Grid view / Backend layout
-------------------------------------------------------------------------------

The Backend Layout Wizard enables the layout of the well known "Columns" View
(Web>Page) to be adapted to the frontend look and feel. This feature was a
development from the T3UXW09 and was finished for 4.5. To use this feature,
create records of type "Backend layout" in a Folder, using the available
Wizard to create the grid you want. Then go to the Web>Page module as usual
and select the Grid for your page.
