@@ -33,7 +33,7 @@ class tx_beuser_switchbackuser {
 				'ses_userid' => $that->user['ses_backuserid'],
 				'ses_backuserid' => 0
 				);
-			$GLOBALS['TYPO3_DB']->exec_UPDATEquery('be_sessions', 'ses_id='.$GLOBALS['TYPO3_DB']->fullQuoteStr($GLOBALS['BE_USER']->id, 'be_sessions').' AND ses_name=\'be_typo_user\' AND ses_userid='.intval($GLOBALS['BE_USER']->user['uid']),$updateData);
+			$GLOBALS['TYPO3_DB']->exec_UPDATEquery('be_sessions', 'ses_id='.$GLOBALS['TYPO3_DB']->fullQuoteStr($GLOBALS['BE_USER']->id, 'be_sessions').' AND ses_name=\'' . t3lib_beUserAuth::getCookieName(). '\' AND ses_userid='.intval($GLOBALS['BE_USER']->user['uid']),$updateData);
 
 			$redirectUrl = $GLOBALS['BACK_PATH'] . 'index.php' . ($GLOBALS['TYPO3_CONF_VARS']['BE']['interfaces'] ? '' : '?commandLI=1');
 			t3lib_utility_Http::redirect($redirectUrl);
